layout changes login page overflow bug fix

--- a/src/index.css
+++ b/src/index.css
@@ -8,18 +8,16 @@ body {
   min-width: 100vw;
   height: 100vh;
   background-color: rgb(0, 0, 0);
-  width: 1440px;
-  overflow: auto;
 }
 
 .login-page {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* background: whitesmoke; */
 }
 
 .login-page-wrapper {
